added support for styling slides titles

--- a/templates/slim/section.html.slim
+++ b/templates/slim/section.html.slim
@@ -23,5 +23,5 @@
   - else
     section id=(titleless ? nil : @id) data-transition=(attr 'data-transition') data-transition-speed=(attr 'data-transition-speed') data-background=(attr 'data-background') data-background-size=(attr 'data-background-size') data-background-repeat=(attr 'data-background-repeat') data-background-transition=(attr 'data-background-transition')
       - unless hide_title
-        h2=title
+        h2 style=(attr 'style') =title
       =content.chomp
