--- a/templates/slim/section.html.slim
+++ b/templates/slim/section.html.slim
@@ -4,7 +4,7 @@
   section
     section id=(hide_title ? nil : @id) data-transition=(attr 'data-transition') data-transition-speed=(attr 'data-transition-speed') data-background=(attr 'data-background') data-background-size=(attr 'data-background-size') data-background-repeat=(attr 'data-background-repeat') data-background-transition=(attr 'data-background-transition')
       - unless hide_title
-        h2=title
+        h2 style=(attr 'style') =title
       - (blocks - subsections).each do |block|
         =block.convert
     - subsections.each do |subsection|
